name:          levmar
version:       0.1
cabal-version: >= 1.6
build-type:    Simple
stability:     experimental
author:        Roel van Dijk & Bas van Dijk
maintainer:    Roel van Dijk & Bas van Dijk
copyright:     (c) 2009 Roel van Dijk & Bas van Dijk
license:       BSD3
license-file:  LICENSE
category:      numerical
synopsis:      An implementation of the Levenberg-Marquardt algorithm
description:   The Levenberg-Marquardt algorithm is an iterative
               technique that finds a local minimum of a function that
               is expressed as the sum of squares of nonlinear
               functions. It has become a standard technique for
               nonlinear least-squares problems and can be thought of
               as a combination of steepest descent and the
               Gauss-Newton method. When the current solution is far
               from the correct one, the algorithm behaves like a
               steepest descent method: slow, but guaranteed to
               converge. When the current solution is close to the
               correct solution, it becomes a Gauss-Newton method.
               .
               Optional box- and linear constraints can be given. Both
               single and double precision floating point types are
               supported.
               .
               This library consists of two layers:
               .
               * LevMar.Intermediate: A medium-level layer that wraps
                 the low-level functions and provides a more Haskell
                 friendly interface.
               .
	       * LevMar: A high-level layer that uses type-level
                 programming to add extra type safety.
               .
               The actual algorithm is implemented in a C
               library. See:
               <http://www.ics.forth.gr/~lourakis/levmar/>.
               .
               A note regarding the license:
               .
               This library depends on bindings-levmar which is
               bundled together with a C library which falls under the
               GPL. Please be aware of this when distributing programs
               linked with this library. For details see the
               description and license of bindings-levmar.

source-repository head
  Type: darcs
  Location: http://code.haskell.org/levmar

library
  build-depends: base >= 3 && < 4.2
               , bindings-levmar < 0.2
  exposed-modules: LevMar
                 , LevMar.Intermediate
                 , TypeLevelNat
                 , SizedList
  ghc-options: -Wall -O2

executable testLevMarIntermediate
  build-depends: base   >= 3 && < 4.2
               , random >= 1 && < 1.2
               , bindings-levmar < 0.2
  ghc-options: -Wall -O2
  other-modules: LevMar.Intermediate
  main-is: TestLevMarIntermediate.hs

executable testLevMar
  build-depends: base >= 3 && < 4.2
               , random >= 1 && < 1.2
               , bindings-levmar < 0.2
  ghc-options: -Wall -O2
  other-modules: LevMar
               , LevMar.Intermediate
               , SizedList
  main-is: TestLevMar.hs
